--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -35,7 +35,11 @@ body {
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif !important;
+}
+
+label {
+  font-size: 0.75rem;
 }
 
 button,
@@ -66,6 +70,10 @@ input,
 textarea {
   width: 100%;
   border-radius: 0.5em;
+}
+
+.selected-icon-container {
+  background-color: var(--success) !important;
 }
 
 /* Animations */
