--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -26,21 +26,29 @@
 }
 
 html,
-body {
-  width: 100%;
+body,
+#root,
+main,
+aside,
+#preview {
+  /* width: 100%;
   height: 100%;
   max-width: 100%;
   max-height: 100%;
-  margin: 0;
+  margin: 0; */
+  width: 100%;
+  height: 100%;
+  max-height: 100%;
+  overflow-y: scroll;
 }
 
 body {
   font-family: "Poppins", sans-serif !important;
 }
 
-label {
+/* label {
   font-size: 0.75rem;
-}
+} */
 
 button,
 input,
@@ -74,6 +82,11 @@ textarea {
 
 .selected-icon-container {
   background-color: var(--success) !important;
+}
+
+.hidden {
+  height: 0 !important;
+  overflow: hidden !important;
 }
 
 /* Animations */
