--- a/src/components/Preview/Preview.css
+++ b/src/components/Preview/Preview.css
@@ -1,3 +1,8 @@
 .nav-item-container {
   background-color: var(--dark-primary) !important;
 }
+
+.preview-header {
+  min-height: 10%;
+  max-height: 10%;
+}
